tests/baselines/reference/for-inStatementsInvalid.errors.txt
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(2,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(5,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(8,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(10,10): error TS2404: The left-hand side of a 'for...in' statement cannot use a type annotation.
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(31,18): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'Extract<keyof this, string>'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts(48,18): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'Extract<keyof this, string>'.


==== tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts (6 errors) ====
    var aNumber: number;
    for (aNumber in {}) { }
         ~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
    
    var aBoolean: boolean;
    for (aBoolean in {}) { }
         ~~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
    
    var aRegExp: RegExp;
    for (aRegExp in {}) { }
         ~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
    
    for (var idx : number in {}) { }
             ~~~
!!! error TS2404: The left-hand side of a 'for...in' statement cannot use a type annotation.
    
    function fn(): void { }
    for (var x in fn()) { }
    
    var c : string, d:string, e;
    
    for (var x in c || d) { }
    for (var x in e ? c : d) { }
    for (var x in 42 ? c : d) { }
    for (var x in '' ? c : d) { }
    for (var x in 42 ? d[x] : c[x]) { }
    for (var x in c[23]) { }
    
    for (var x in (<T>(x: T) => x)) { }
    for (var x in function (x: string, y: number) { return x + y }) { }
    
    class A {
        biz() : number{
            for (var x in this.biz()) { }
            for (var x in this.biz) { }
            for (var x in this) { }
                     ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'Extract<keyof this, string>'.
!!! related TS6203 tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts:29:18: 'x' was also declared here.
            return null;
        }
    
        static baz() : number {
            for (var x in this) { }
            for (var x in this.baz) { }
            for (var x in this.baz()) { }
    
            return null;
        }
    }
    
    class B extends A {
        boz() {
            for (var x in this.biz()) { }
            for (var x in this.biz) { }
            for (var x in this) { }
                     ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'Extract<keyof this, string>'.
!!! related TS6203 tests/cases/conformance/statements/for-inStatements/for-inStatementsInvalid.ts:46:18: 'x' was also declared here.
    
            for (var x in super.biz) { }
            for (var x in super.biz()) { }
            return null;
        }
    }
    
    interface I {
        id: number;
        [idx: number]: number;
    }
    var i: I;
    
    for (var x in i[42]) { } 
    